--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-.eiffel linguist-detectable=false  
-.assembly linguist-detectable=false  
+*.eiffel linguist-detectable=false  
+*.assembly linguist-detectable=false  
